styles/styles.css
/* http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
html {box-sizing: border-box;}
*, *:before, *:after {box-sizing: inherit;}

body {
  color: #fff;
  font-family: "Helvetica Neue";
  font-size: 24px;
  margin: 0;
  text-shadow: 0 1px 1px rgba(0,0,0,0.4)
}

.background {
  background-color: #732;
  background-image: url('/assets/img/lizzy.jpg');
  background-size: cover;
  height: 100%;
  left: 0;
  padding: 4%;
  position: absolute;
  top: 0;
  width: 100%;
}

h1,
p {margin: 20px 0;}

a,
a:visited {
  color: #4af;
  text-decoration: none;
}

a:hover {color: #6aa;}

.content {
  max-width: 600px;
  width: 100%;
}

p {line-height: 30px;}

